@@ -90,6 +90,8 @@ def main(args):
   parser.add_option('--cred-string', action='store', dest='credstring',
                     help='String of credential.', metavar='<cred-string>',
                     default=None)
+  parser.add_option('-r', '--reverse', action='store_true', dest='reverse',
+                    help='Modify a reverse zone.', default=False)
   parser.add_option('-q', '--quiet', action='store_true', dest='quiet',
                     help='Suppress program output.', default=False)
 
@@ -105,9 +107,6 @@ def main(args):
     if( not options.type ):
       cli_common_lib_instance.DnsError(
           'A zone type must be specified with -t/--type', 1)
-    if( not options.origin ):
-      cli_common_lib_instance.DnsError(
-          'An origin must be specified with --origin.', 1)
     views = roster_client_lib.RunFunction(u'ListViews', options.username,
                                           credfile=options.credfile,
                                           credstring=options.credstring,
@@ -116,20 +115,26 @@ def main(args):
                                               'core_return']
     if( options.view not in views and options.view ):
       cli_common_lib_instance.DnsError('The view specified does not exist.', 1)
-    reverse_version = 0
-    if( options.origin.endswith('.in-addr.arpa.') ):
-      reverse_version = 4
-      ip_cidr_allowed = ['8', '16', '24']
-    elif( options.origin.endswith('.ip6.arpa.') ):
-      reverse_version = 6
-      ip_cidr_allowed = ['16', '32', '48', '64', '80', '96', '112']
-    if( reverse_version ):
-      if( not options.cidr_block ):
+    if( options.reverse ):
+      if( options.origin and options.cidr_block ):
         cli_common_lib_instance.DnsError(
-            'Reverse zones require the --cidr-block argument', 1)
-      if( options.cidr_block.split('/')[-1] not in ip_cidr_allowed ):
+            'Origin and cidr block cannot be given simultaneously for '
+            'reverse zones.', 1)
+      if( not options.origin and not options.cidr_block ):
         cli_common_lib_instance.DnsError(
-            'Cidr block must end with: "/%s"' % ', /'.join(ip_cidr_allowed), 1)
+            'Either an origin or cidr block must be specified when '
+            'making reverse zones.', 1)
+      if( not options.origin ):
+        options.origin = roster_client_lib.RunFunction(
+            u'ReverseIP', options.username, credfile=options.credfile,
+            credstring=options.credstring, args=[options.cidr_block],
+            server_name=options.server)['core_return']
+      else:
+        options.cidr_block = roster_client_lib.RunFunction(
+            u'UnReverseIP', options.username, credfile=options.credfile,
+            credstring=options.credstring, args=[options.origin],
+            server_name=options.server)['core_return']
+
       zones = roster_client_lib.RunFunction(
           u'MakeZone', options.username, credfile=options.credfile,
           credstring=options.credstring,
@@ -153,6 +158,9 @@ def main(args):
                    options.zone, options.cidr_block))
 
     else:
+      if( not options.origin ):
+        cli_common_lib_instance.DnsError(
+            'An origin must be specified with forward zones.', 1)
       zones = roster_client_lib.RunFunction(
           u'MakeZone', options.username, credfile=options.credfile,
           credstring=options.credstring,
